# ohms_sim

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  package.xml
config/: dual_robot_forest_sim.yaml  dual_robot_rgbd_lidar_ros_gz_bridge.yaml  dual_robot_uav_ugv_forest_sim.yaml  dual_robot_uav_ugv_rgbd_lidar_ros_gz_bridge.yaml  dual_robot_ugv_ugv_forest_sim.yaml  dual_robot_ugv_ugv_rgbd_ros_gz_bridge.yaml  multi_robot_2uav_1ugv_forest_sim.yaml  multi_robot_2uav_1ugv_rgbd_lidar_ros_gz_bridge.yaml  multi_robot_2uav_2ugv_forest_sim.yaml  multi_robot_2uav_2ugv_rgbd_lidar_ros_gz_bridge.yaml  multi_robot_sim.yaml  single_robot_forest_sim.yaml  single_robot_marsyard2020_sim.yaml  single_robot_maze_sim.yaml  spawn_robot.yaml
docs/: ROADMAP.md
hooks/: ohms_sim.dsv.in
include/comms_emulator_helper_system/: CommsEmulatorHelper.hh
launch/: dual_robot_sim.launch.py  dual_robot_uav_ugv_sim.launch.py  dual_robot_ugv_ugv_sim.launch.py  flatforest.launch.py  forest.launch.py  forest5x.launch.py  marsyard.launch.py  maze.launch.py  multi_robot_2uav_1ugv_sim.launch.py  multi_robot_2uav_2ugv_sim.launch.py  multi_robot_sim.launch.py  single_robot_sim.launch.py  spawn_robot.launch.py
models/X4_UAV_Config_2/: model.sdf
models/X4_UAV_Config_RAISE/: model.config  model.sdf
models/marsyard2020_forest_terrain/: model.config  model.sdf
models/marsyard2020_forest_terrain_5x/: model.config  model.sdf
src/: CommsEmulatorHelper.cc  CommsEmulatorHelper.md
trajectory_rosbags/atlas_in_forest_1/: atlas_in_forest_1_0.db3  metadata.yaml
(+9 files in other folders)
